# auth-sdk-generator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  auth-sdk-generator.opam  dune-project
doc/: github-issues-structure.md  project-audit-2025.md  ready-for-github-release.md
examples/convex-hydra-poc/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.node.json
examples/convex-keycloak-poc/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json
examples/github-oauth-demo/: .gitignore  README.md  package.json  server.ts
examples/high-integrity-demo/: README.md  package.json
examples/id-me-demo/: .env.example  package.json  server.ts
examples/keycloak-demo/: .env.example  README.md  package.json  server.ts
examples/login-gov-demo/: .env.example  package.json  server.ts  tsconfig.json
examples/ory-hydra-demo/: .env.example  README.md  package.json  server.ts
examples/ory-hydra-high-integrity/: README.md  package.json
examples/stripe-connect-demo/: .env.example  README.md  package.json  server.ts
js/: dune  js_interface.ml
lib/: dune
lib/ast/: auth_types.ml  dune
lib/generators/: dune
lib/parsers/: dune  (+1 more)
specs/: github.auth  id-me.auth  keycloak.auth  login-gov.auth  ory-hydra.auth  prototype.auth  stripe-connect.auth
studio/: index.html  package.json  rescript.json
test/: dune  test_ast.ml  test_auth_sdk_generator.ml  test_helpers.ml  test_parser.ml  test_pkce_refactor.ml  test_py_generator.ml  test_ts_generator.ml  test_validators.ml  test_version_fetcher.ml
(+57 files in other folders)
